Fixing Play All in the All Music's songs section. User can click the Play All and play the songs instantly.

BUG: 312102